--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "bootstrap": "3.3.7",
+    "chalk": "^2.3.2",
     "chart.js": "2.7.2",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.1",
@@ -30,6 +31,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jquery": "3.2.1",
     "lodash": "4.17.5",
+    "mongodb": "3.0.5",
     "npm-run-all": "4.1.2",
     "nsp": "3.2.1",
     "open": "0.0.5",
