--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "body-parser": "^1.18.2",
     "eslint-watch": "^3.1.3",
     "helmet": "^3.9.0",
+    "randomcolor": "^0.5.3",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.2"
   }
